classDiagram
    %% ================= 后端实体（线上输出即驼峰） =================
    class User {
        +Long userId
        +String openid
        +String nickname
        +String avatarUrl
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
    }
    class Circle {
        +Long circleId
        +String name
        +String description
        +Long creatorId
        +Integer maxMembers
        +String inviteCode
        +Integer status  "1=活跃 0=已归档"
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
    }
    class CircleMember {
        +Long id
        +Long circleId
        +Long userId
        +Integer role  "0普通 1管理 2创建者"
        +LocalDateTime joinedAt
    }
    class Plan {
        +Long planId
        +Long circleId
        +String name
        +LocalDate startDate
        +LocalDate endDate
        +Integer totalDurationGoal
        +Integer dailyDurationGoal
        +Integer circleTotalGoal
        +Integer minDurationPerCheckin
        +Integer status  "0未开始 1进行中 2已结束"
    }
    class CheckinRecord {
        +Long recordId
        +Long planId  "可空=宽松打卡"
        +Long circleId  "新增，可空"
        +Long userId
        +Integer duration
        +String exerciseType
        +String photoUrl
        +String remark
        +LocalDateTime checkinTime
        +LocalDateTime createdAt
    }

    Circle "1" --> "0..*" CircleMember : 包含
    Circle "1" --> "0..*" Plan : 拥有
    Circle "1" --> "0..*" CheckinRecord : 归属(可空)
    Plan "1" --> "0..*" CheckinRecord : 关联(可空)
    User "1" --> "0..*" CheckinRecord : 打卡

    %% ================= 后端服务/控制器 =================
    class CheckinService {
        <<interface>>
        +checkin(planId, userId, duration, exerciseType, photoUrl, remark, circleId) CheckinRecord
        +getUserCheckinStatsMine(userId) Map
        +getUserCheckinRecordsMine(userId, planId, exerciseType, startDate, endDate, page, size) List
        +getUserCheckinRecords(planId, userId, page, size) List
        +getUserCheckinStats(planId, userId) Map
    }
    class CircleService {
        <<interface>>
        +archiveCircle(circleId, userId) void
        +restoreCircle(circleId, userId) void
        +isCircleMember(circleId, userId) boolean
        +getCircleDetail(circleId, userId) Map
    }
    class CheckinController {
        +checkin(request, userDetails) Result
        +getUserCheckinStatsMine(userDetails) Result
        +getUserCheckinRecordsMine(userDetails, page, size) Result
    }
    class CircleController {
        +archiveCircle(circleId, userDetails) Result
        +restoreCircle(circleId, userDetails) Result
    }
    CheckinController --> CheckinService
    CircleController --> CircleService
    CheckinService ..> CheckinRecord
    CircleService ..> Circle

    %% ================= 前端类型 =================
    class FrontendCircle {
        +circleId: ID
        +name: string
        +creatorId: ID
        +maxMembers: number
        +inviteCode: string
        +status: 0 | 1
        +memberCount?: number
    }
    class FrontendPlan {
        +planId: ID
        +circleId: ID
        +startDate: string
        +endDate: string
        +totalDurationGoal: number
        +dailyDurationGoal: number
        +minDurationPerCheckin: number
        +status: number
    }
    class FrontendCheckinRecord {
        +recordId: ID
        +planId?: ID
        +circleId?: ID
        +userId: ID
        +duration: number
        +exerciseType: string
        +photoUrl: string
        +remark: string
        +checkinTime: Timestamp
    }
    class UserStatsMine {
        +todayDuration: number
        +totalDuration: number
        +checkinDays: number
        +totalCheckins: number
        +currentStreak: number
        +completionRate: number
    }

    %% ================= 前端组件/服务 =================
    class LooseCheckinPanel {
        +visible: boolean
        +planId?: ID
        +defaultCircleId?: ID
        -exerciseType: ExerciseType
        -duration: number
        -circleId?: ID
        -photoPath: string
        -remark: string
        +onSubmit() void
        +onClose() void
        +onSuccess() void
    }
    class CheckinServiceFE {
        +createCheckin(data: CreateCheckinRequest) Promise~APIResponse~CheckinRecord~~
        +getMyStats() Promise~APIResponse~UserStatsMine~~
        +getMyCheckins(params) Promise~APIResponse~PaginatedResult~CheckinRecord~~
        +uploadPhoto(filePath) Promise~APIResponse~{url}~~
    }
    class CircleServiceFE {
        +archiveCircle(circleId) Promise
        +restoreCircle(circleId) Promise
        +getMyCircles() Promise
        +getCircleDetail(circleId) Promise
    }
    LooseCheckinPanel --> CheckinServiceFE
    LooseCheckinPanel --> UserStatsMine
    LooseCheckinPanel ..> FrontendCircle : 选择圈子
